Fix CCS layout bug

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -408,14 +408,15 @@ div.pagination{
   padding: 0;
 }
 .ccstable li{
-  display: table-cell;
-  padding-right: 10px;
+  display: inline-block;
+  padding:0 10px 10px 0;
 }
 .ccstable a{
   /*background: #f1e9e9;*/
   border: 3px solid #fff;
   padding: 10px 15px;
   border: 1px solid;
+  display: block;
 }
 .ccstable .active a{
   background: #f1e9e9;
